XWIKI-15268: Page icon not displayed when hovering the page suggestion * Also fixed some whitespace issue on the search suggest (live search) when attachment results were present (because the search suggest source "Attachment Names" is displayed on two rows).
(cherry picked from commit 79828565ae32f11091b2e196256799e42d6a8915)

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/search/searchSuggest.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/search/searchSuggest.css
@@ -10,7 +10,7 @@ div.suggestItems.searchSuggest {
 }
 
 .xlist .xitem .xitemcontainer:hover {
-  background-color: inherit;
+  background-color: transparent;
 }
 
 ul.xlist li.showAllResults {
